<resources>
    <string name="app_name">APZ-mobile-app</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="sign_in">Sign in</string>
    <string name="task_status">Task status:</string>
    <string name="set_done">Set done</string>
    <string name="created_by">Created by:</string>
    <string name="task_deadline">Task deadline:</string>
    <string name="task_length">Task length:</string>
    <string name="task_description">Task description:</string>
    <string name="task_name">Task name:</string>
    <string name="agenda">Agenda</string>
    <string name="creator_email">Creator email:</string>
    <string name="creator_phone">Creator phone:</string>
    <string name="category_name">Category name:</string>
    <string name="category_description">Category description:</string>
    <string name="tasks">Tasks</string>
    <string name="animals">Animals</string>
    <string name="animal_information">Animal information</string>
    <string name="animal_name">Animal name:</string>
    <string name="animal_rfid">Animal rfid:</string>
    <string name="animal_status">Animal status:</string>
    <string name="add_new_animal">Add new animal</string>
    <string name="show_animals">Show animals</string>
    <string name="save">Save</string>
    <string name="enter_animal_s_rfid">Enter animal\'s rfid</string>
    <string name="enter_animal_s_name">Enter animal\'s name</string>
    <string name="adding_new_animal">Adding new animal</string>
</resources>